# rake_template

./: .gitignore  CMakeLists.txt  README.md
apps/app1/: CMakeLists.txt  main.cpp
apps/app2/: CMakeLists.txt  main.cpp
apps/hen-app1/: CMakeLists.txt  main.cpp
apps/hen-app2/: CMakeLists.txt  main.cpp
apps/hen-download/: CMakeLists.txt  main.cpp
apps/hen-download2/: CMakeLists.txt  main.cpp
apps/rat-app1/: CMakeLists.txt  main.cpp
apps/rat-app2/: CMakeLists.txt  main.cpp
modules/ce/: CMakeLists.txt
modules/ce/bench/: fun2_bench.cpp
modules/ce/src/: downloader.cpp  session.cpp
modules/cppw/: CMakeLists.txt
modules/cppw/bench/: fun1_bench.cpp  main.cpp
modules/cppw/src/: downloader.cpp  hik_util.cpp  hik_util.hpp  playback.cpp  session.cpp  utils.cpp
modules/cppw/test/: src1_test.cpp  test.hpp
modules/mod_a/: CMakeLists.txt
modules/mod_a/bench/: bench.hpp  fun1_bench.cpp
modules/mod_a/src/: src1.cpp
modules/mod_a/test/: src1_test.cpp
modules/mod_so/: CMakeLists.txt
modules/mod_so/bench/: bench.hpp  fun2_bench.cpp
modules/mod_so/src/: src2.cpp
modules/mod_so/test/: src2_test.cpp  test.hpp
modules/net/: CMakeLists.txt  NET.md
modules/net/bench/: bench.hpp  fun1_bench.cpp
modules/net/src/: downloader.cpp  hik_util.hpp  playback.cpp  session.cpp  src1.cpp  (+1 more)
modules/net_ce/: CMakeLists.txt
modules/reader/: CMakeLists.txt
samples/fun2/: CMakeLists.txt  main.cpp
samples/group_a/: CMakeLists.txt  add.cpp
samples/group_so/: CMakeLists.txt  mul.cpp
script/: download2_ipc.sh  download_ipc.sh  hen-install.sh  hen-uninstall.sh
(+38 files in other folders)
